fix centering of features on mobile

--- a/easy-bank/src/css/app.css
+++ b/easy-bank/src/css/app.css
@@ -611,10 +611,20 @@ header {
 .content {
   background-color: #f3f4f6;
 }
+@media screen and (max-width: 550px) {
+  .content {
+    text-align: center;
+  }
+}
 
 .content_header {
   width: 70%;
   margin-bottom: 50px;
+}
+@media screen and (max-width: 550px) {
+  .content_header {
+    width: 100%;
+  }
 }
 
 .content_feature {
@@ -636,8 +646,19 @@ header {
     width: 100%;
   }
 }
+@media screen and (max-width: 550px) {
+  .feature-block {
+    margin-bottom: 30px;
+  }
+}
 .feature-block p {
   font-size: 16px;
+}
+
+@media screen and (max-width: 550px) {
+  .feature-block:last-of-type {
+    margin-bottom: 0;
+  }
 }
 
 .icon-container {
